<resources>
    <string name="app_name">汕学派</string>

    <!-- 登录   -->
    <string name="account">账号</string>
    <string name="account_hint">请输入校园网账号，如20stu</string>
    <string name="password">密码</string>
    <string name="password_hint">请输入密码</string>
    <string name="login">登录</string>
    <string name="login_info_invalid">账号或密码格式不正确</string>
    <!--主界面-->
    <string name="syllabus">课程表</string>
    <string name="oa">OA</string>
    <string name="life">Life</string>
    <string name="personal">个人</string>
    <!-- 课程模块-->
    <string name="set_curr_week">设定当前周</string>
    <string name="set_wallpaper">设置背景</string>
    <string name="add_lesson">添加课程</string>
    <string name="delete_lesson">删除课程</string>
    <string name="lesson_name">课程名　</string>
    <string name="classroom_name">地点　　</string>
    <string name="week_">周数　　</string>
    <string name="choose">请选择</string>
    <string name="time_">时间　　</string>
    <string name="submit">确认</string>
    <string name="negative">取消</string>
    <string name="positive">确定</string>
    <!-- 个人模块-->
    <string name="empty_sign">个性签名为空</string>
    <string name="change_semester">切换学期</string>
    <string name="current_semester">未设置当前学期</string>
    <string name="change_theme">切换主题</string>
    <string name="personal_page">个人主页</string>
    <string name="school_smart_card">一卡通</string>
    <string name="examination">考试</string>
    <string name="grade">成绩</string>
    <string name="mail">邮箱</string>
    <string name="setting">设置</string>
    <!-- 设置-->
    <string name="help_feedback">帮助与反馈</string>
    <string name="share_app">分享应用</string>
    <string name="current_version">当前版本</string>
    <string name="about_us">关于我们</string>
    <string name="logout">退出登录</string>

    <!-- 通用-->
    <string name="loading">正在加载中…</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
