<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/lessonNameTV"
        android:text="@string/lesson_name"
        android:textSize="16sp"
        android:lines="1"
        android:ellipsize="end"
        android:textColor="@color/material_textBlack_black"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/classroomTV"
        android:text="@string/classroom_name"
        android:textSize="16sp"
        android:textColor="@color/material_textBlack_black"
        android:layout_toRightOf="@+id/lessonNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_toEndOf="@+id/lessonNameTV" />

    <TextView
        android:id="@+id/lessonTimeTV"
        android:layout_below="@+id/lessonNameTV"
        android:text="@string/time_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/deleteLessonIcon"
        android:src="@drawable/icon_delete_lesson"
        android:layout_centerVertical="true"
        android:layout_margin="5dp"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true" />
</RelativeLayout>