<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".login.LoginActivity">

    <LinearLayout
        android:id="@+id/passwordLayout"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="parent"
        android:layout_margin="10dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:layout_marginEnd="10dp" />

        <EditText
            android:id="@+id/passwordEditText"
            android:textColor="#000000"
            android:hint="@string/password_hint"
            android:textSize="18sp"
            android:inputType="numberPassword"
            android:singleLine="true"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:background="@drawable/edit_text_style"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/passwordLayout"
        android:layout_margin="10dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:layout_marginEnd="10dp" />

        <EditText
            android:id="@+id/accountEditText"
            android:textColor="#000000"
            android:hint="@string/account_hint"
            android:textSize="18sp"
            android:singleLine="true"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:background="@drawable/edit_text_style" />
    </LinearLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout"
        android:textColor="#ffffff"
        android:background="@drawable/button_style"
        android:baselineAligned="false"
        android:text="@string/login" />

</androidx.constraintlayout.widget.ConstraintLayout>